--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,6 +23,6 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-org.gradle.java.home= /Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
+# org.gradle.java.home= /Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
 # Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.93.0
+FLIPPER_VERSION=0.99.0
