--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/react-native": "^0.66.13",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-confirmation-code-field": "^7.3.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.7.2"
+    "react-native-screens": "^3.7.2",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
